--- a/02-Igniting Our App/package.json
+++ b/02-Igniting Our App/package.json
@@ -20,6 +20,9 @@
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   },
+  "browserslist": [
+    "cover 100%"
+  ],
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
